--- a/.env.exmaple
+++ b/.env.exmaple
@@ -2,3 +2,5 @@ ACCESS_KEY_ID=********************
 SECRET_ACCESS_KEY=***************
 USER_POOL_ID=***************
 CLIENT_ID=***************
+ID_POOL_ID=***************
+REGION=***************
